fix: ошибки css2

--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -10,7 +10,7 @@
     -o-transition: all .4s ease;
     -ms-transition: all .4s ease;
     transition: all .4s ease;
-    border: 2px solid #FFFFFF
+    border: 2px solid #FFFFFF;
 }
 
 .profile__add-button:hover{
