--- a/blocks/profile/__status/profile__status.css
+++ b/blocks/profile/__status/profile__status.css
@@ -3,62 +3,26 @@
     font-size: 18px;
     font-weight: 400;
     line-height: 22px;
-    letter-spacing: 0em;
-    margin-top: 16px;
+    margin-top: 6px;
     white-space: nowrap;
     text-overflow: ellipsis;
+    overflow: hidden;
+    max-width: 330px;
 }
 
-@media all and (max-width: 1024px)
-{
-    .profile__status{
-        font-size: 16px;
-        line-height: 20px;
-        margin-top: 14px;
-    }
-}
-
-@media all and (max-width: 850px)
+@media all and (max-width: 970px)
 {
     .profile__status{
         font-size: 14px;
-        line-height: 18px;
-        margin-top: 12px;
-    }
-}
-
-@media all and (max-width: 760px)
-{
-    .profile__status{
-        font-size: 12px;
-        line-height: 16px;
-    }
-}
-
-@media all and (max-width: 650px)
-{
-    .profile__status{
-        font-size: 10px;
-        line-height: 14px;
-    }
-}
-
-@media all and (max-width: 540px)
-{
-    .profile__status{
-        font-size: 8px;
-        line-height: 12px;
+        line-height: 17px;
     }
 }
 
 @media all and (max-width: 480px)
 {
     .profile__status{
-        font-size: 14px;
-        line-height: 17px;
+        max-width: 260px;
+        margin-top: 7px;
         text-align: center;
-        margin-top: 14px;
     }
 }
-
-
