--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -3,26 +3,28 @@
     display: -ms-grid;
     grid-template-rows: repeat(2, 1fr);
     grid-template-columns: repeat(3, 1fr);
-    width: calc(880/1280*100%);
+    /* width: calc(880/1280*100%); */
+    width: 880px;
     gap: 20px 17px;
     margin: auto;
     margin-top: calc(50/1280*100%);
 }
 
-@media all and (max-width: 850px)
+@media all and (max-width: 1080px)
 {
     .elements{
+        width: 581px;
         grid-template-rows: repeat(3, 1fr);
         grid-template-columns: repeat(2, 1fr);
     }
 }
 
-@media all and (max-width: 480px)
+@media all and (max-width: 720px)
 {
     .elements{
+        width: 281px;
         grid-template-rows: repeat(6, 1fr);
         grid-template-columns: repeat(1, 1fr);
-        width: calc(282/320*100%);
         margin-top: 36px;
     }
 }
