--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -2,16 +2,17 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 74px;
     width: calc(880/1280*100%);
     margin: auto;
     margin-top: 45px;
+    padding-bottom: 41px;
+    border-bottom: 1px solid rgba(84, 84, 84, .7);
 }
 
 @media all and (max-width: 480px)
 {
     .header{
-        height: 56px;
+        padding-bottom: 31.6px;
         width: 100%;
         margin-top: 28px;
     }
