--- a/blocks/popup/__button/popup__button.css
+++ b/blocks/popup/__button/popup__button.css
@@ -1,11 +1,12 @@
 .popup__button{
-    width: calc(358/430*100%);
+    width: 100%;
     height: 50px;
     background-color: black;
     margin: 0;
-    margin: auto;
+    border: 0;
+    padding: 0;
     margin-top: 48px;
-    margin-bottom: 25px;
+    margin-bottom: 37px;
     display: flex;
     color: white;
     justify-content: center;
@@ -22,29 +23,12 @@
     opacity: 80%;
 }
 
-@media all and (max-width: 850px)
-{
-    .popup__button{
-        margin-top: 36px;
-        font-size: 16px;
-        line-height: 20px;
-    }
-}
-
-@media all and (max-width: 650px)
-{
-    .popup__button{
-        margin-top: 28px;
-        font-size: 14px;
-        line-height: 18px;
-    }
-}
-
-@media all and (max-width: 480px)
+@media all and (max-width: 720px)
 {
     .popup__button{
         margin-top: 45px;
         height: 46px;
         line-height: 17px;
+        margin-bottom: 25px;
     }
 }
