--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -2,30 +2,15 @@
     position: relative;
     width: 430px;
     margin: auto;
-    aspect-ratio: 430/330;
-    margin-top: calc(195/1280*100%);
+    height: 330px;
     border-radius: 10px;
     background-color: white;
 }
 
-@media all and (max-width: 850px)
+@media all and (max-width: 720px)
 {
     .popup__container{
-        width: 380px;
-    }
-}
-
-@media all and (max-width: 650px)
-{
-    .popup__container{
-        width: 330px;
-    }
-}
-
-@media all and (max-width: 480px)
-{
-    .popup__container{
-        aspect-ratio: 282/322;
+        height: 322px;
         width: 282px;
     }
 }
