--- a/blocks/popup/__text/popup__text.css
+++ b/blocks/popup/__text/popup__text.css
@@ -1,35 +1,19 @@
 .popup__text{
     margin: 0;
-    height: 23px;
     font-size: 24px;
     font-weight: 900;
-    line-height: 29px;
+    line-height: 23px;
     color: black;
     padding-top: 34px;
     margin-left: calc(36/430*100%);
 }
 
-@media all and (max-width: 850px)
+@media all and (max-width: 720px)
 {
     .popup__text{
-        padding-top: 30px;
-        font-size: 20px;
-        line-height: 24px;
-    }
-}
-
-@media all and (max-width: 650px)
-{
-    .popup__text{
-        padding-top: 26px;
+        margin-bottom: 75px;
         font-size: 18px;
         line-height: 22px;
-    }
-}
-
-@media all and (max-width: 480px)
-{
-    .popup__text{
         margin-left: 22px;
         padding-top: 25px;
     }
