--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -1,8 +1,10 @@
 .profile__add-button{
     width: calc(150/880*100%);
+    min-width: 90px;
     aspect-ratio: 150/50;
     cursor: pointer;
     display: flex;
+    padding: 0;
     justify-content: center;
     align-items: center;
     -webkit-transition: all .4s ease;
@@ -11,13 +13,15 @@
     -ms-transition: all .4s ease;
     transition: all .4s ease;
     border: 2px solid #FFFFFF;
+    background-color: black;
+    border-radius: 2px;
 }
 
 .profile__add-button:hover{
-    opacity: 60%;
+    opacity: 50%;
 }
 
-@media all and (max-width: 480px)
+@media all and (max-width: 890px)
 {
     .profile__add-button{
         width: 100%;
