--- a/blocks/profile/__edit-name/profile__edit-name.css
+++ b/blocks/profile/__edit-name/profile__edit-name.css
@@ -2,3 +2,10 @@
     display: flex;
     align-items: end;
 }
+
+@media all and (max-width: 970px)
+{
+    .profile__edit-name{
+        align-items: center;
+    }
+}
