--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,41 +1,9 @@
 .profile__info{
     margin-left: 30px;
-    max-width: 400px;
+    max-width: calc(710/880*100%);
 }
 
-@media all and (max-width: 1024px)
-{
-    .profile__info{
-        margin-left: 26px;
-        max-width: 300px;
-    }
-}
-
-
-@media all and (max-width: 850px)
-{
-    .profile__info{
-        margin-left: 22px;
-        max-width: 270px;
-    }
-}
-
-@media all and (max-width: 760px)
-{
-    .profile__info{
-        margin-left: 18px;
-        max-width: 230px;
-    }
-}
-
-@media all and (max-width: 650px)
-{
-    .profile__info{
-        max-width: 180px;
-    }
-}
-
-@media all and (max-width: 480px)
+@media all and (max-width: 890px)
 {
     .profile__info{
         margin: auto;
