--- a/blocks/popup/__button/popup__button.css
+++ b/blocks/popup/__button/popup__button.css
@@ -5,9 +5,11 @@
     margin: 0;
     border: 0;
     padding: 0;
-    margin-top: 48px;
+    margin-top: calc(48px - 4px/3);
     margin-bottom: 37px;
+    padding-top: 14px;
     display: flex;
+    font-family: 'Inter', ‘Arial’, sans-serif;
     color: white;
     justify-content: center;
     -webkit-transition: all .2s ease;
@@ -26,7 +28,7 @@
 @media all and (max-width: 720px)
 {
     .popup__button{
-        margin-top: 45px;
+        margin-top: calc(45px - 4px/3);
         height: 46px;
         line-height: 17px;
         margin-bottom: 25px;
