--- a/blocks/popup/__cross/popup__cross.css
+++ b/blocks/popup/__cross/popup__cross.css
@@ -1,5 +1,6 @@
 .popup__cross{
     position: absolute;
+    border: 0;
     top: -40px;
     right: -40px;
     aspect-ratio: 1/1;
@@ -10,6 +11,9 @@
     -ms-transition: all .2s ease;
     transition: all .2s ease;
     cursor: pointer;
+    background-image: url('../../../images/cross.svg');
+    background-size: cover;
+    background-color: transparent;
 }
 
 .popup__cross:hover{
