--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -5,6 +5,7 @@
     cursor: pointer;
     display: flex;
     padding: 0;
+    border: 0;
     justify-content: center;
     align-items: center;
     -webkit-transition: all .4s ease;
@@ -12,13 +13,15 @@
     -o-transition: all .4s ease;
     -ms-transition: all .4s ease;
     transition: all .4s ease;
-    border: 2px solid #FFFFFF;
-    background-color: black;
+    background-color: transparent;
     border-radius: 2px;
+    background-image: url('../../../images/add-button.svg');
+    background-size: cover;
+    background-size: 100% 100%;
 }
 
 .profile__add-button:hover{
-    opacity: 50%;
+    opacity: 60%;
 }
 
 @media all and (max-width: 890px)
@@ -28,5 +31,6 @@
         aspect-ratio: 282/50;
         max-width: 282px;
         margin-top: 36px;
+        background-image: url('../../../images/add-button-big.svg');
     }
 }
