--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -8,7 +8,7 @@
     -o-transition: all .4s ease;
     -ms-transition: all .4s ease;
     transition: all .4s ease;
-    background-color: black;
+    background-color: transparent;
     background-size: cover;
     background-image: url("../../../images/edit-button.svg");
     border: 0;
