--- a/blocks/popup/__button/popup__button.css
+++ b/blocks/popup/__button/popup__button.css
@@ -5,10 +5,13 @@
     margin: 0;
     border: 0;
     padding: 0;
-    margin-top: calc(48px - 4px/3);
+    margin-top: calc(48px - 4px/3 - 30px);
     margin-bottom: 37px;
     padding-top: 14px;
-    display: flex;
+    padding-bottom: 18px;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 22px;
     font-family: 'Inter', ‘Arial’, sans-serif;
     color: white;
     justify-content: center;
@@ -28,7 +31,9 @@
 @media all and (max-width: 720px)
 {
     .popup__button{
-        margin-top: calc(45px - 4px/3);
+        font-size: 14px;
+        font-weight: 400;
+        margin-top: calc(45px - 4px/3 - 30px);
         height: 46px;
         line-height: 17px;
         margin-bottom: 25px;
