feat: добавление функциональности

--- a/blocks/elements/__element/elements__element.css
+++ b/blocks/elements/__element/elements__element.css
@@ -1,6 +1,8 @@
 .elements__element{
+    position: relative;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     border-radius: 10px;
     overflow: hidden;
     aspect-ratio: 282/362;
