--- a/blocks/elements/__rectangle/elements__rectangle.css
+++ b/blocks/elements/__rectangle/elements__rectangle.css
@@ -3,6 +3,5 @@
     justify-content: space-between;
     /* align-items: center; */
     background: white;
-    margin-top: calc(30/282*100%);
-    margin-bottom: calc(30/282*100%);
+    margin-bottom: 9px;
 }
