--- a/blocks/elements/__rectangle/elements__rectangle.css
+++ b/blocks/elements/__rectangle/elements__rectangle.css
@@ -3,5 +3,5 @@
     justify-content: space-between;
     /* align-items: center; */
     background: white;
-    margin-bottom: 9px;
+    margin-top: 30px;
 }
