--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,10 +1,9 @@
 .popup__input{
     margin: 0;
-    margin-bottom: 30px;
     padding: 0;
     padding-bottom: 10px;
     display: flex;
-    font-family: 'Inter', ‘Arial’, sans-serif;
+    font-family: 'Inter', 'Arial', sans-serif;
     font-size: 14px;
     font-weight: 400;
     line-height: 17px;
