--- a/pages/index.css
+++ b/pages/index.css
@@ -41,3 +41,7 @@
 @import url(../blocks/popup/__illustration/popup__illustration.css);
 @import url(../blocks/popup/_action_depict/popup_action_depict.css);
 @import url(../blocks/popup/_opened/popup_opened.css);
+@import url(../blocks/popup/__error/popup__error.css);
+@import url(../blocks/popup/__error/_active/popup__error_active.css);
+@import url(../blocks/popup/__input/_type_error/popup__input_type_error.css);
+@import url(../blocks/popup/__button/_inactive/popup__button_inactive.css);
