--- a/blocks/popup/__error/popup__error.css
+++ b/blocks/popup/__error/popup__error.css
@@ -7,6 +7,6 @@
     font-size: 12px;
     font-weight: 400;
     line-height: 12px;
-    height: 24px;
+    min-height: 24px;
     color: rgba(255, 0, 0, 1);
 }
