fix: исправление недочетов 9

--- a/blocks/elements/__heart/elements__heart.css
+++ b/blocks/elements/__heart/elements__heart.css
@@ -2,7 +2,7 @@
     background-image: url('../../../images/elements-heart.svg');
     /* width: calc(22/282*100%); */
     width: 22px;
-    aspect-ratio: 22/19;
+    height: 19px;
     background-size: contain;
     margin-right: calc(20/282*100%);
     cursor: pointer;
