--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -8,6 +8,7 @@
 @import url(../blocks/header/__logo/header__logo.css);
 
 @import url(../blocks/profile/profile.css);
+@import url(../blocks/profile/__edit-avatar/profile__edit-avatar.css);
 @import url(../blocks/profile/__avatar/profile__avatar.css);
 @import url(../blocks/profile/__block/profile__block.css);
 @import url(../blocks/profile/__info/profile__info.css);
@@ -16,6 +17,7 @@
 @import url(../blocks/profile/__name/profile__name.css);
 @import url(../blocks/profile/__status/profile__status.css);
 @import url(../blocks/profile/__add-button/profile__add-button.css);
+@import url(../blocks/profile/__photo-container/profile__photo-container.css);
 
 @import url(../blocks/elements/elements.css);
 @import url(../blocks/elements/__element/elements__element.css);
@@ -23,8 +25,11 @@
 @import url(../blocks/elements/__image/elements__image.css);
 @import url(../blocks/elements/__rectangle/elements__rectangle.css);
 @import url(../blocks/elements/__text/elements__text.css);
+@import url(../blocks/elements/__like-container/elements__like-container.css);
+@import url(../blocks/elements/__likes/elements__likes.css);
 @import url(../blocks/elements/__trash/elements__trash.css);
 @import url(../blocks/elements/__heart/_active/elements__heart_active.css);
+@import url(../blocks/elements/__trash/_display_none/elements__trash_display_none.css);
 
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__text/footer__text.css);
@@ -45,3 +50,4 @@
 @import url(../blocks/popup/__error/_active/popup__error_active.css);
 @import url(../blocks/popup/__input/_type_error/popup__input_type_error.css);
 @import url(../blocks/popup/__button/_inactive/popup__button_inactive.css);
+@import url(../blocks/popup/__form/_action_delete/popup__form_action_delete.css);
