--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -1,6 +1,10 @@
 .profile__avatar{
     width: 120px;
-    height: 120px;
     border-radius: 50%;
     position: absolute;
+    background-size: cover;
+    width: 100%;
+    aspect-ratio: 1/1;
+    height: 120px;
+    object-fit: cover;
 }
