--- a/main.css
+++ b/main.css
@@ -4,7 +4,8 @@
 .header{border-bottom:1px solid rgba(84,84,84,.7);display:flex;flex-direction:column;justify-content:space-between;margin:45px auto auto;padding-bottom:41px;width:68.75%}@media (max-width:480px){.header{margin-top:28px;padding-bottom:31.6px;width:100%}}
 .header__logo{aspect-ratio:142/33;max-width:142px}@media (max-width:480px){.header__logo{margin-left:27px;max-width:115px;width:32.41875%}}
 .profile{align-items:center;display:flex;justify-content:space-between;margin:40px auto auto;width:68.75%}@media (max-width:890px){.profile{flex-direction:column;margin-top:42px;width:88.125%}}
-.profile__avatar{border-radius:50%;height:100%;width:120px}
+.profile__edit-avatar{background:none;border:none;border-radius:50%;cursor:pointer;display:inline-block;height:120px;outline:inherit;padding:0;position:absolute;width:120px;z-index:2}.profile__edit-avatar:hover{background-color:rgba(0,0,0,.8);transition:.4s ease}.profile__edit-avatar:before{bottom:0;content:"";left:0;opacity:0;position:absolute;right:0;top:0;transition:opacity .4s ease;z-index:1}.profile__edit-avatar:hover:before{background:url(a086f758840ae814ecde.svg) no-repeat 50%;opacity:1;z-index:5}
+.profile__avatar{aspect-ratio:1/1;background-size:cover;border-radius:50%;height:120px;-o-object-fit:cover;object-fit:cover;position:absolute;width:120px;width:100%}
 .profile__block{align-items:center;display:flex}@media (max-width:890px){.profile__block{flex-direction:column}}
 .profile__info{margin-left:30px;max-width:80.68182%}@media (max-width:890px){.profile__info{align-items:center;display:flex;flex-direction:column;justify-content:center;margin:26px auto auto;max-width:400px}}
 .profile__edit-button{align-items:center;background-color:transparent;background-image:url(af236f6cf67005f1d7aa.svg);background-size:cover;border:1px solid #fff;cursor:pointer;display:flex;height:24px;justify-content:center;margin-bottom:11px;margin-left:20px;margin-right:30px;transition:all .4s ease;width:24px}.profile__edit-button:hover{opacity:60%}@media (max-width:970px){.profile__edit-button{height:18px;margin:0 0 4px 10px;width:18px}}
@@ -12,17 +13,21 @@
 .profile__name{font-size:42px;font-weight:500;line-height:39px;margin:6px 0 0;max-width:300px;overflow:hidden;padding-bottom:7px;text-overflow:ellipsis;white-space:nowrap}@media (max-width:970px){.profile__name{font-size:27px;line-height:26px}}@media (max-width:890px){.profile__name{margin-top:0;padding-bottom:7px;padding-left:28px;text-align:center}}
 .profile__status{font-size:18px;font-weight:400;line-height:22px;margin:6px 0 0;max-width:330px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}@media (max-width:970px){.profile__status{font-size:14px;line-height:17px}}@media (max-width:480px){.profile__status{margin-top:7px;max-width:260px;text-align:center}}
 .profile__add-button{align-items:center;aspect-ratio:150/50;background-color:transparent;background-image:url(13997fdf54b4cb323817.svg);background-size:cover;background-size:100% 100%;border:0;border-radius:2px;cursor:pointer;display:flex;justify-content:center;min-width:90px;padding:0;transition:all .4s ease;width:17.04545%}.profile__add-button:hover{opacity:60%}@media (max-width:890px){.profile__add-button{aspect-ratio:282/50;background-image:url(8e041299935e2fbbe15e.svg);margin-top:36px;max-width:282px;width:100%}}
+.profile__photo-container{height:120px;overflow:hidden;position:relative;width:120px}
 .elements{display:grid;display:-ms-grid;gap:20px 17px;grid-template-columns:repeat(3,1fr);margin:3.90625% auto auto;width:880px}@media (max-width:1080px){.elements{grid-template-columns:repeat(2,1fr);width:581px}}@media (max-width:720px){.elements{grid-template-columns:repeat(1,1fr);margin-top:36px;width:281px}}
 .elements__element{aspect-ratio:282/362;background-color:#fff;border-radius:10px;display:flex;flex-direction:column;overflow:hidden;position:relative}
-.elements__heart{background-color:#fff;background-image:url(1ad06e85f169668a1f36.svg);background-repeat:no-repeat;background-size:contain;border:0;cursor:pointer;height:19px;margin-right:7.0922%;-moz-user-select:none;-webkit-user-select:none;user-select:none;width:22px}.elements__heart:hover{opacity:60%;transition:all .4s ease}.elements__heart:active{background-image:url(35948469632d0421d697.svg);opacity:100%;transition:all .1s ease}
+.elements__heart{background-color:#fff;background-image:url(1ad06e85f169668a1f36.svg);background-repeat:no-repeat;background-size:contain;border:0;cursor:pointer;height:19px;-moz-user-select:none;-webkit-user-select:none;user-select:none;width:22px}.elements__heart:hover{opacity:60%;transition:all .4s ease}.elements__heart:active{background-image:url(35948469632d0421d697.svg);opacity:100%;transition:all .1s ease}
 .elements__image{aspect-ratio:1/1;height:282px;-o-object-fit:cover;object-fit:cover;width:100%}
-.elements__rectangle{background:#fff;display:flex;justify-content:space-between;margin-top:30px}
-.elements__text{bottom:1px;color:#000;font-size:24px;font-weight:900;left:21px;line-height:23px;margin:0;overflow:hidden;padding-bottom:6.73759%;position:relative;text-overflow:ellipsis;white-space:nowrap;width:69.50355%}
-.elements__trash{background-color:transparent;background-image:url(823b0cf1b0b7e9cb7cad.svg);border:0;cursor:pointer;height:19px;position:absolute;right:20px;top:20px;width:18px}.elements__trash:hover{opacity:60%;transition:all .4s ease}
+.elements__rectangle{background:#fff;display:flex;justify-content:space-between;margin-top:22px}
+.elements__text{bottom:1px;color:#000;font-size:24px;font-weight:900;left:21px;line-height:23px;margin:0;overflow:hidden;padding-bottom:6.73759%;padding-top:8px;position:relative;text-overflow:ellipsis;white-space:nowrap;width:69.50355%}
+.elements__like-container{margin-right:7.0922%}
+.elements__likes{color:#000;font-size:13px;font-weight:400;line-height:16px;margin:3px 0 0;text-align:center}
+.elements__trash{background-color:transparent;background-image:url(823b0cf1b0b7e9cb7cad.svg);border:0;cursor:pointer;display:block;height:19px;position:absolute;right:20px;top:20px;width:18px}.elements__trash:hover{opacity:60%;transition:all .4s ease}
 .elements__heart_active{background-image:url(35948469632d0421d697.svg);opacity:100%}
+.elements__trash_display_none{display:none}
 .footer{margin:66px auto 60px;width:68.75%}@media (max-width:480px){.footer{margin-bottom:36px;margin-top:48px;width:88.125%}}
 .footer__text{color:#545454;font-size:18px;font-style:normal;font-weight:400;line-height:22px;margin:0}@media (max-width:480px){.footer__text{font-size:14px;line-height:17px}}
-.popup{align-items:center;background-color:rgba(0,0,0,.5);display:flex;height:100vh;justify-content:center;left:0;opacity:0;position:fixed;top:0;transition:visibility .2s,opacity .2s ease-in;visibility:hidden;width:100%}
+.popup{align-items:center;background-color:rgba(0,0,0,.5);display:flex;height:100vh;justify-content:center;left:0;opacity:0;position:fixed;top:0;transition:visibility .2s,opacity .2s ease-in;visibility:hidden;width:100%;z-index:10}
 .popup__container{background-color:#fff;border-radius:10px;margin:auto;position:relative;width:430px}@media (max-width:720px){.popup__container{width:282px}}
 .popup__text{color:#000;font-size:24px;font-weight:900;line-height:23px;margin:0 0 0 8.37209%;padding-top:34px}@media (max-width:720px){.popup__text{font-size:18px;line-height:22px;margin-bottom:75px;margin-left:22px;padding-top:25px}}
 .popup__input{background-color:transparent;border:0;border-bottom:1px solid rgba(0,0,0,.2);display:flex;font-family:Inter,Arial,sans-serif;font-size:14px;font-weight:400;line-height:17px;margin:0;padding:0 0 10px;width:100%}.popup__input:focus{border-bottom:1px solid rgba(0,0,0,.5);outline:none}
@@ -38,4 +43,5 @@
 
 .popup__input_type_error{border-bottom-color:red}
 .popup__button_inactive{background:#fff;border:1px solid #000;color:#000;opacity:.2;pointer-events:none}
+.popup__form_action_delete{margin-top:21.33333px}
 
